[package]
name = "subb"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to subtract two numbers"
authors = ["Abhay"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/abhay-raj-04/regg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
